# SlicerSpine

./: CMakeLists.txt  README.md
SegmentAxisAlignment/: CMakeLists.txt  SegmentAxisAlignment.py
SegmentAxisAlignment/Resources/UI/: SegmentAxisAlignment.ui
